# nexus-sentinel

./: .dockerignore  .gitignore  Cargo.toml  DEPLOY.md  sentinel.toml
.github/workflows/: release.yml
0/: Cargo.toml
0/src/: lib.rs  performance_baseline.rs  power_monitor.rs  service_availability.rs  types.rs
beaver-warrior-website/: package-lock.json  package.json  vercel.json
beaver-warrior-website/public/: install.sh  version.json
scripts/: Dockerfile.linux  Dockerfile.windows  deploy-prep.sh
sentinel-ai/: Cargo.toml
sentinel-ai/src/: adversarial_input_detector.rs  agent_action_logger.rs  agent_behavior_baseline.rs  agent_cost_monitor.rs  agent_identity_attestation.rs  agent_network_fence.rs  agent_permission_boundary.rs  agent_session_recorder.rs  agentic_loop_detector.rs  ai_supply_chain_attestation.rs  api_key_monitor.rs  autonomous_agent_containment.rs  capability_probe_detector.rs  clipboard_exfil_detector.rs  context_window_stuffing_guard.rs  conversation_state_integrity.rs  cross_plugin_data_fence.rs  data_poisoning_detector.rs  delegation_chain_auditor.rs  embedding_space_monitor.rs  fine_tuning_attack_detector.rs  goal_drift_monitor.rs  hallucination_detector.rs  human_in_the_loop_enforcer.rs  indirect_injection_scanner.rs  instruction_hierarchy_enforcer.rs  jailbreak_classifier.rs  lib.rs  local_ai_discovery.rs  local_sandbox.rs  mcp_protocol_security.rs  memory_poisoning_guard.rs  model_drift_sentinel.rs  model_extraction_guard.rs  model_scanner.rs  multi_agent_conflict.rs  multi_turn_tracker.rs  multimodal_injection_scanner.rs  output_filter.rs  output_watermarker.rs  (+18 more)
sentinel-api/: Cargo.toml
sentinel-api/src/: auth_enforcer.rs  graphql_blocker.rs  lib.rs  payload_inspector.rs  rate_limiter.rs  schema_validator.rs  types.rs
sentinel-app/: Cargo.toml
sentinel-app/src/: alert_dispatcher.rs  components.rs  dashboard_ui.rs  main.rs
sentinel-app/tests/: integration_tests.rs
sentinel-backup/: Cargo.toml
sentinel-backup/src/: config_drift_detector.rs  encryption_auditor.rs  golden_image_comparator.rs  immutable_backup_validator.rs  integrity_verifier.rs  lib.rs  retention_manager.rs  types.rs
sentinel-browser/: Cargo.toml
sentinel-browser/src/: cookie_guard.rs  download_scanner.rs  extension_scanner.rs  lib.rs  script_analyzer.rs  types.rs  url_filter.rs
sentinel-cloud/: Cargo.toml
sentinel-cloud/src/: credential_leak_detector.rs  iam_auditor.rs  lib.rs  network_exposure.rs  oauth_auditor.rs  serverless_monitor.rs  shadow_it_detector.rs  storage_exposure.rs  storage_scanner.rs  types.rs
sentinel-compliance/: Cargo.toml
sentinel-compliance/src/: audit_logger.rs  control_mapper.rs  gap_analyzer.rs  lib.rs  policy_engine.rs  report_generator.rs  types.rs
sentinel-container/: Cargo.toml
sentinel-container/src/: image_scanner.rs  lib.rs  policy_enforcer.rs  registry_guard.rs  runtime_monitor.rs  secret_manager.rs  types.rs
sentinel-core/: Cargo.toml
sentinel-core/src/: agent.rs  compression.rs  config.rs  config_loader.rs  dashboard.rs  dedup.rs  differential.rs  error.rs  event_bus.rs  file_integrity.rs  fs_watcher.rs  hierarchical.rs  io_adapters.rs  lib.rs  metrics.rs  mitre.rs  mmap_stream.rs  net_connections.rs  packet_capture.rs  paged.rs  persistence.rs  pipeline.rs  process_monitor.rs  pruning.rs  reversible.rs  sparse.rs  streaming.rs  taxii_client.rs  threat_intel.rs  tiered_cache.rs  tls_probe.rs  verifier.rs  vq_codec.rs
sentinel-crypto/: Cargo.toml
sentinel-crypto/src/: ca_monitor.rs  key_rotation.rs  lib.rs  quantum_readiness.rs  tests.rs  tls_auditor.rs  types.rs
sentinel-darkweb/: Cargo.toml
sentinel-darkweb/src/: breach_credential_monitor.rs  ct_watcher.rs  domain_reputation.rs  exposed_service_detector.rs  lib.rs  types.rs
sentinel-data/: Cargo.toml
sentinel-data/src/: access_controller.rs  backup_manager.rs  classification_engine.rs  data_lineage.rs  dlp_scanner.rs  encryption_engine.rs  integrity_checker.rs  key_manager.rs  lib.rs  masking_engine.rs  tokenizer.rs  types.rs
sentinel-deception/: Cargo.toml
sentinel-deception/src/: attacker_profiler.rs  decoy_network.rs  dns_canary.rs  honey_file.rs  honey_token.rs  honeypot_manager.rs  lib.rs  types.rs
sentinel-desktop/frontend/: package-lock.json  package.json
sentinel-desktop/frontend/src-tauri/: Cargo.toml  tauri.conf.json
sentinel-desktop/frontend/src-tauri/capabilities/: default.json
sentinel-desktop/frontend/src-tauri/icons/: icon.icns
sentinel-desktop/frontend/src-tauri/src/: auth.rs  config.rs  lib.rs  oauth.rs  sentinel.rs  updater.rs
sentinel-dns/: Cargo.toml
sentinel-dns/src/: dns_blocklist.rs  dns_cache.rs  dns_filter.rs  dns_logging.rs  dns_rate_limiter.rs  dns_rebind_protect.rs  dns_sinkhole.rs  dns_tunnel_detect.rs  dnssec_validator.rs  doh_proxy.rs  (+2 more)
sentinel-email/: Cargo.toml
sentinel-endpoint/: Cargo.toml
sentinel-endpoint/src/: app_control.rs  clipboard_monitor.rs  download_guard.rs  file_integrity.rs  kernel_monitor.rs  lib.rs  login_monitor.rs  malware_scanner.rs  privilege_monitor.rs  process_monitor.rs  ransomware_detect.rs  registry_monitor.rs  remediation.rs  scheduled_task_monitor.rs  screen_lock.rs  types.rs  usb_guard.rs
sentinel-exfiltration/: Cargo.toml
sentinel-forensics/: Cargo.toml
sentinel-hardware/: Cargo.toml
sentinel-identity/: Cargo.toml
sentinel-iot/: Cargo.toml
sentinel-license-server/: .env.example  Cargo.toml  Dockerfile
sentinel-license-server/src/: main.rs
sentinel-malware/: Cargo.toml
sentinel-mgmt/: Cargo.toml
sentinel-microseg/: Cargo.toml
sentinel-mobile/: Cargo.toml
sentinel-network/: Cargo.toml
sentinel-ops/: Cargo.toml
sentinel-ot/: Cargo.toml
sentinel-phishing/: Cargo.toml
sentinel-privacy/: Cargo.toml
sentinel-regulatory/: Cargo.toml
sentinel-resilience/: Cargo.toml
sentinel-selfprotect/: Cargo.toml
sentinel-siem/: Cargo.toml
sentinel-soceng/: Cargo.toml
sentinel-supply-chain/: Cargo.toml
sentinel-threat-intel/: Cargo.toml
sentinel-time/: Cargo.toml
sentinel-vpn/: Cargo.toml
sentinel-vuln/: Cargo.toml
sentinel-web/: Cargo.toml
(+400 files in other folders)
