[package]
name = "sentinel-ai"
version.workspace = true
edition.workspace = true

[[bin]]
name = "plan-review-server"
path = "src/bin/plan_review_server.rs"

[dependencies]
sentinel-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
sysinfo = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
