[package]
name = "sentinel-core"
version.workspace = true
edition.workspace = true
description = "Core memory optimization library — 13 breakthrough techniques"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true }
flate2 = { workspace = true }
lz4_flex = { workspace = true }
blake3 = { workspace = true }
xxhash-rust = { workspace = true }
dashmap = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
toml = { workspace = true }
notify = { workspace = true }
axum = { workspace = true }
sysinfo = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
tower-http = { workspace = true }
pnet = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
