[package]
name = "sentinel-license-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "License key server — Stripe webhook, key generation, email delivery"

[[bin]]
name = "license-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
hex = "0.4"
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
hmac = "0.12"
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
tower-http = { workspace = true }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
